welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:4: error: type mismatch;
 found   : Unit
 required: Boolean
  else if(n<90) return false;
       ^